--- a/过程报告/02物联网1802-刘龙辉-20183613/第一次过程报告.md
+++ b/过程报告/02物联网1802-刘龙辉-20183613/第一次过程报告.md
@@ -1,1 +1,962 @@
 
+
+课 程 设 计 报 告
+第一阶段报告
+
+
+
+
+
+班级：物联网1802班
+学号：20183613
+姓名：刘龙辉
+设计时间：2020年7月
+
+
+
+
+
+1.进度表
+
+
+
+星期一          讨论，分配任务
+星期二          设计文法并查询资料学习语法分析
+星期三          构造语法分析器，并修改文法
+星期四          查询资料学习如何构造语义分析器	
+星期五          写第一阶段报告
+
+
+
+
+2.工作内容
+（1）文法即符号表确定
+第一次上机我们组便开始研究文法该如何设计。组长的想法是说做一个能大致编译c语言的编译器。于是我们先分配了任务，然后研究如何确定文法和符号表。会中，由组长给出初步文法，再由成员讨论进行修改，于是我们确定了如下文法：
+
+<源程序>→<主函数>|<主函数><外部定义>  
+
+<主函数>→int main ( ) {<复合语句>}  
+
+<外部声明>→<函数声明><外部声明>|<函数定义><外部声明>|ε   <函数声明>→<数据类型><标识符>(<形参>);
+
+<形参>→<数据类型><标识符>【,<数据类型><标识符>】  
+
+<函数定义>→<数据类型><标识符>(<形参>){<复合语句>}   
+<复合语句>→<变量声明><复合语句>|<赋值语句><复合语句>|<选择语句><复合语句>|<循环语句>< 复合语句>|<返回语句><复合语句>|<函数调用><复合语句>|kong
+  
+<变量声明>→<数据类型><标识符列表>；|<数据类型><数组列表>; 
+
+<标识符列表>→<标识符>【,<标识符>】
+
+<数组列表>→<标识符>[<算术表达式>]【,<标识符>[<算术表达式>]】  
+
+<赋值语句>→<标识符>=<表达式>；   <选择语句>→if(<表达式>){<复合语句>}|if(<表达式>){<复合语句>}else(<表达式>){<复合语句>}
+  
+<循环语句>→while(<表达式>){<复合语句>}
+  
+<返回语句>→return<标识符>|return<整型常量>  
+
+<函数调用>→<标识符>=<标识符>(<实参>);|<标识符>(<实参>); 
+
+<实参>→<标识符>【,<标识符>】
+  
+<表达式>→<算术表达式>|<逻辑表达式>|<字符常量>|<字符串常量>  
+
+<算数表达式>→ < T> < E1>
+< E1>→< W1>< E1>|ε < T>→< F> < T1>
+< T1>→< W2> < F> < T1>|ε < F>→(<算术表达式>)|<标识符> |<整数>|<实数>
+< W1>→+|< W2>→*|/  
+
+<逻辑表达式>→<算术表达式><逻辑关系符><算术表达式>|<逻辑关系符><算术表达式> 
+
+<逻辑关系符>→<|>|==|<=|>=|!=|
+  
+<数据类型>→int|char|string|float  
+
+<标识符> → <字母> < S>|_< S> 
+< S>→<字母>< S>|<数字>< S>|_< S>|ε  
+
+<常数>→<整数> | <实数> 
+<整数>→<数字> |<数字> <整数> 
+<实数>→<整数> . <整数>   
+<字符常量>→'<字母>'|'<数字>'
+<字符串常量>→"<符号串>" 
+<符号串>→<字母><符号串>|<数字><符号串>|ε
+  
+<字母>→A|B|C|…|Z|a|b|c|…|z 
+<数字>→0|1|2|3|4|5|6|7|8|9
+
+
+以及如下符号表：
+struct TOKEN
+{
+	int type_id;
+	int num;
+	/*
+	code
+	0：关键字表
+	1：标识符表
+	2：界符表
+	3：整型常量表
+	4：实型常量表
+	5：字符表
+	6：字符串表
+	
+	7：SYNBL表
+	8：类型表
+	9：数组表
+	10：种类表
+	11：函数表
+	
+	num为该类型的标号（偏移地址）
+	*/
+};	//token序列用于表示表的类型
+
+//SYNBL主表结构
+struct SYNBL
+{
+	string name;	//名字
+	TOKEN type;		//类型
+	string CAT;		//种类
+	TOKEN ADDR;		//地址
+};
+
+//类型表结构
+struct TYPEL
+{
+	char TVAL;		//类型代码
+	TOKEN TPOINT;	//信息内容指向
+};
+
+//数组表结构
+struct AINFL
+{
+	int LOW;		//数组起始标号
+	int UP;			//数组末尾标号
+	char CTP;		//数组类型
+	int CLEN;		//数组长度
+};
+
+//函数表结构
+struct PFINFL
+{
+	int nowLEVEL;	//当前层次
+	int farLEVEL;	//调用此函数的层次
+	int FN;			//参数个数
+	TOKEN funAddr;	//在主表中的位置
+};
+
+//四元式结构
+struct QT 
+{
+	string operate;  //操作符
+	string res1;     //第一个操作数
+	string res2;     //第二个操作数
+	string result;   //操作结果
+};
+
+
+//关键字表
+const char* KT[10] = { "main","int","char","float","if","else","while","for","return" };
+
+//标识符表
+vector<string> IT;
+
+//界符表
+const char* PT[19] = { "+" ,"-","*","/","<",">","<=",">=","=","!=","==",";",",","(",")","[","]","{" ,"}" };
+
+//字符表
+vector<char> CT;
+
+//字符串常量表
+vector<string> ST;
+
+//整型常量表
+vector<int> IC;
+
+//实型常量表
+vector<float> FC;
+
+//SYNBL主表
+vector<SYNBL> SYNBL_List;
+
+//类型表
+vector<TYPEL> TYPEL_List;
+
+//数组表
+vector<AINFL> AINFL_List;
+
+//函数表
+vector<PFINFL> PFINFL_List;
+
+//长度表
+vector<int> Len_List;
+
+//四元式序列
+vector<QT> QT_List;
+
+
+
+（2）语法语义义分析
+
+1.	主要思路
+根据词法分析给出的token序列，不断地进行读取，再利用修改后的文法与符号表对读取内容进行自上而下的递归子程序分析。
+
+2.	实现代码
+#include <iostream>
+#include <stdio.h>
+#include <map>
+#include <set>
+#include <vector>
+#include "符号表结构.h"
+
+using namespace std;
+
+TOKEN now_Token;  //当前的读取token序列
+int flag=1;
+
+//初始化now_Token，使now_Token指向第一个token
+int int_token()
+{
+
+}
+
+//now_Token指向下一个token
+void readToken()
+{
+
+}
+
+
+void run() 
+{   
+	//程序开始
+	int_token();
+	Source();
+	if (flag == 1) 
+	{  
+		cout << "语法分析完成，没有错误！" << endl;	
+	}
+	else if (flag == 0)
+	{
+		cout << "语法分析过程中存在错误！" << endl;
+	}
+	else
+	{
+		cout << "错误标志flag结果错误！" << endl;
+	}
+
+}
+
+//<源程序>→<开始>
+int Source()
+{
+	begin();
+}
+
+//<开始>→<数据类型><主函数>|<数据类型><外部定义>
+int begin()
+{
+	if (now_Token.type_id == 0 && (KT[now_Token.num] == "int" || KT[now_Token.num] == "char" || KT[now_Token.num] == "float"))
+	{
+		readToken();
+		if (now_Token.type_id == 0 && KT[now_Token.num] == "main")
+		{
+			main_function();
+		}
+		else if (now_Token.type_id == 1)
+		{
+			External();
+		}
+		else
+		{
+			cout << "函数名缺少或函数名定义错误！" << endl;
+			flag = 0;
+		}
+	}
+	else
+	{
+		cout << "函数缺少类型符！" << endl;
+		flag = 0;
+	}
+}
+
+//<主函数>→main ( ) {<复合语句>}
+int main_function()
+{
+	if (now_Token.type_id == 0 && KT[now_Token.num] == "main")
+	{
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+		{
+			readToken();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+			{
+				readToken();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == "{")
+				{
+					readToken();
+					Compound();
+					if (now_Token.type_id == 2 && PT[now_Token.num] == "}")
+					{
+						return 1;
+					}
+					else
+					{
+						cout << "主函数定义缺少 } 右花括号！" << endl;
+						flag = 0;
+					}
+				}
+				else
+				{
+					cout << "主函数定义缺少 } 右花括号！" << endl;
+					flag = 0;
+				}
+
+			}
+			else
+			{
+				cout << "主函数定义中缺少 ） 右括号！" << endl;
+				flag = 0;
+			}
+		}
+		else
+		{
+			cout << "主函数定义中缺少 ( 左括号！" << endl;
+			flag = 0;
+		}
+	}
+	return 1;
+}
+
+//<外部定义>→<函数头>;<开始>|<函数头>{<复合语句>}<开始>
+int External()
+{
+	function_header();
+	if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+	{
+		readToken();
+		begin();
+	}
+	else if (now_Token.type_id == 2 && PT[now_Token.num] == "{")
+	{
+		readToken();
+		Compound();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "}")
+		{
+			readToken();
+			begin();
+		}
+		else
+		{
+			cout << "函数定义缺少 } 右花括号！" << endl;
+			flag = 0;
+		}
+	}
+	else
+	{
+		cout << "外部定义存在错误！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+//<函数头>→<标识符>(<形参>)
+int function_header()
+{
+	if (now_Token.type_id == 1)
+	{
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+		{
+			readToken();
+			Formal();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+			{
+				readToken();
+				return 1;
+			}
+			else
+			{
+				cout << "函数定义中缺少 ） 右括号！" << endl;
+				flag = 0;
+			}
+		}
+		else
+		{
+			cout << "函数定义中缺少 ( 左括号！" << endl;
+			flag = 0;
+		}
+	}
+	
+	return 1;
+}
+
+
+//<形参>→<数据类型><标识符>|<数据类型><标识符>,<形参>
+int Formal()
+{
+	if (now_Token.type_id == 0 && (KT[now_Token.num] == "int" || KT[now_Token.num] == "char" || KT[now_Token.num] == "float"))
+	{
+		readToken();
+		if (now_Token.type_id == 1)
+		{
+			readToken();
+			Formal();
+		}
+		else
+		{
+			cout << "定义的形参为非标识符！" << endl;
+			flag = 0;
+		}
+	}
+	else
+	{
+		cout << "数据类型定义错误！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+
+//<复合语句>→<变量声明><复合语句> | <赋值、函数调用语句><复合语句> | <选择语句><复合语句> | <循环语句><复合语句> | <返回语句><复合语句> | ε
+int Compound() 
+{
+	if (now_Token.type_id == 0 && KT[now_Token.num] == "if")
+	{
+		Select();
+		Compound();
+	}
+	else if (now_Token.type_id == 0 && KT[now_Token.num] == "while")
+	{
+		Cycle();
+		Compound();
+	}
+	else if (now_Token.type_id == 0 && KT[now_Token.num] == "return")
+	{
+		Cycle();
+		Compound();
+	}
+	else if (now_Token.type_id == 0 && (KT[now_Token.num] == "int" || KT[now_Token.num] == "char" || KT[now_Token.num] == "float"))
+	{
+		Variable();
+		Compound();
+	}
+	else if (now_Token.type_id == 1)
+	{
+		Call_and_Assignment();
+		Compound();
+	}
+	return 1;
+}
+
+
+
+//<变量声明>→<数据类型><标识符>；|<数据类型><标识符>，<标识符列表>；|<数据类型><标识符><数组列表>;
+int Variable()
+{
+	if (now_Token.type_id == 0 && (KT[now_Token.num] == "int" || KT[now_Token.num] == "char" || KT[now_Token.num] == "float"))
+	{
+		readToken();
+		if (now_Token.type_id == 1)
+		{
+			readToken();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+			{
+				readToken();
+				return 1;
+			}
+			else if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+			{
+				dentifier();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+				{
+					readToken();
+					return 1;
+				}
+				else
+				{
+					cout << "变量声明缺少 ; 分号！" << endl;
+					flag = 0;
+				}
+			}
+			else if (now_Token.type_id == 2 && PT[now_Token.num] == "[")
+			{
+				Array();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+				{
+					readToken();
+					return 1;
+				}
+				else
+				{
+					cout << "变量声明缺少 ; 分号！" << endl;
+					flag = 0;
+				}
+			}
+			else
+			{
+				cout << "变量声明缺少 ; 分号！" << endl;
+				flag = 0;
+			}
+			
+		}
+		
+	}
+	else
+	{
+		cout << "变量声明错误！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+//<标识符列表>→<标识符> | <标识符>,<标识符列表>
+int dentifier()
+{
+	if (now_Token.type_id == 1)
+	{
+		readToken();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+		{
+			readToken();
+			dentifier();
+		}
+	}
+	else
+	{
+		cout << "标识符定义失败！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+//<数组列表>→[<算术表达式>] | ，<标识符>[<算术表达式>]<数组列表1>
+int Array()
+{
+	if (now_Token.type_id == 2 && PT[now_Token.num] == "[")
+	{
+		readToken();
+		Arithmetic_Expression();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "]")
+		{
+			readToken();
+			return 1;
+		}
+		else
+		{
+			cout << "数组定义缺少 ] 右方括号！" << endl;
+			flag = 0;
+		}
+	}
+	else if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+	{
+		readToken();
+		if (now_Token.type_id == 1)
+		{
+			if (now_Token.type_id == 2 && PT[now_Token.num] == "[")
+			{
+				readToken();
+				Arithmetic_Expression();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == "]")
+				{
+					readToken();
+					if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+					{
+						Array();
+					}
+					else
+					{
+						return 1;
+					}
+				}
+				else
+				{
+					cout << "数组定义缺少 ] 右方括号！" << endl;
+					flag = 0;
+				}
+			}
+			else
+			{
+				cout << "数组定义缺少 [ 左方括号！" << endl;
+				flag = 0;
+			}
+		}
+	}
+	return 1;
+}
+
+
+
+//<选择语句>→if(<表达式>){<复合语句>}【else(<表达式>){<复合语句>}】
+int Select()
+{
+	if (now_Token.type_id == 0 && KT[now_Token.num] == "if")
+	{
+		readToken();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+		{
+			readToken();
+			Expression();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+			{
+				readToken();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == "{")
+				{
+					readToken();
+					Compound();
+					if (now_Token.type_id == 2 && PT[now_Token.num], "}")
+					{
+						readToken();
+						if (now_Token.type_id == 0 && KT[now_Token.num] == "else")
+						{
+							readToken();
+							if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+							{
+								readToken();
+								Expression();
+								if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+								{
+									readToken();
+									if (now_Token.type_id == 2 && PT[now_Token.num] == "{")
+									{
+										readToken();
+										Compound();
+										if (now_Token.type_id == 2 && PT[now_Token.num] == "}")
+										{
+											readToken();
+											return 1;
+										}
+										else
+										{
+											cout << "循环语句缺少 } 右花括号！" << endl;
+											flag = 0;
+										}
+									}
+									else
+									{
+										cout << "循环语句缺少 { 左花括号！" << endl;
+										flag = 0;
+									}
+								}
+								else
+								{
+									cout << "循环语句缺少） 右括号！" << endl;
+									flag = 0;
+								}
+							}
+							else
+							{
+								cout << "循环语句缺少（ 左括号！" << endl;
+								flag = 0;
+							}
+						}
+						else
+						{
+							return 1;
+						}
+					}
+					else
+					{
+						cout << "选择语句缺少 } 右花括号！" << endl;
+						flag = 0;
+					}
+				}
+				else
+				{
+					cout << "选择语句缺少 { 左花括号！" << endl;
+					flag = 0;
+				}
+			}
+		}
+		else
+		{
+			cout << "选择语句缺少 （ 左括号！" << endl;
+			flag = 0;
+		}
+	}
+	else
+		return 1;
+}
+
+//<循环语句>→while(<表达式>){<复合语句>}
+int Cycle()
+{
+	if (now_Token.type_id == 0 && KT[now_Token.num] == "while")
+	{
+		readToken();
+		if (now_Token.type_id == 2 && KT[now_Token.num] == "(")
+		{
+			readToken();
+			Expression();
+			if (now_Token.type_id == 2 && KT[now_Token.num] == ")")
+			{
+				readToken();
+				if (now_Token.type_id == 2 && KT[now_Token.num] == "{")
+				{
+					readToken();
+					Compound();
+					if (now_Token.type_id == 2 && PT[now_Token.num] == "}")
+					{
+						readToken();
+						return 1;
+					}
+					else
+					{
+						cout << "循环语句缺少 } 右花括号！" << endl;
+						flag = 0;
+					}
+				}
+				else
+				{
+					cout << "循环语句缺少 { 左花括号！" << endl;
+					flag = 0;
+				}
+			}
+			else
+			{
+				cout << "循环语句缺少） 右括号！" << endl;
+				flag = 0;
+			}
+		}
+		else
+		{
+			cout << "循环语句缺少（ 左括号！" << endl;
+			flag = 0;
+		}
+	}
+	return 1;
+}
+
+//<返回语句>→return<标识符>;|return<整型常量>;
+int Back()
+{
+	if (now_Token.type_id == 0 && KT[now_Token.num] == "return")
+	{
+		readToken();
+		if (now_Token.type_id == 1 || now_Token.type_id == 3)
+		{
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+			{
+				readToken();
+				return 1;
+			}
+			else
+			{
+				cout << "缺少 ; 分号！" << endl;
+				flag = 0;
+			}
+		}
+		else
+		{
+			cout << "返回值非标识符或整数常量！" << endl;
+			flag = 0;
+		}
+	}
+	return 1;
+}
+
+//<赋值、函数调用语句>→ < 标识符 >= <表达式>； | < 标识符 >= <标识符>(<实参>); | <标识符>(<实参>);
+int Call_and_Assignment()
+{
+	if (now_Token.type_id == 1)
+	{
+		readToken();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == "=")
+		{
+			readToken();
+			Expression();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+			{
+				readToken();
+				return 1;
+			}
+			else if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+			{
+				readToken();
+				Actual();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+				{
+					readToken();
+					if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+					{
+						readToken();
+						return 1;
+					}
+					else
+					{
+						cout << "缺少 ; 分号！" << endl;
+						flag = 0;
+					}
+				}
+				else
+				{
+					cout << "缺少 ） 反括号！" << endl;
+					flag = 0;
+				}
+			}
+			else
+			{
+				cout << "赋值或函数调用错误！" << endl;
+				flag = 0;
+			}
+		}
+		else if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+		{
+			readToken();
+			Actual();
+			if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+			{
+				readToken();
+				if (now_Token.type_id == 2 && PT[now_Token.num] == ";")
+				{
+					readToken();
+					return 1;
+				}
+				else
+				{
+					cout << "缺少 ; 分号！" << endl;
+					flag = 0;
+				}
+			}
+			else
+			{
+				cout << "缺少 ） 反括号！" << endl;
+				flag = 0;
+			}
+		}
+	}
+	else
+	{
+		cout << "赋值或函数调用错误！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+//<实参>→<标识符>|<标识符>,<实参>
+int Actual()
+{
+	if (now_Token.type_id == 1)
+	{
+		readToken;
+		if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+		{
+			readToken;
+			Actual();
+		}
+	}
+	else
+	{
+		cout << "函数实参定义错误！" << endl;
+		flag = 0;
+	}
+	return 1;
+}
+
+int Actual_1()
+{
+	if (now_Token.type_id == 2 && PT[now_Token.num] == ",")
+	{
+		readToken;
+		if (now_Token.type_id == 1)
+		{
+			readToken;
+			Actual_1();
+		}
+		else
+		{
+			cout << "函数实参定义错误！" << endl;
+			flag = 0;
+		}
+	}
+	return 1;
+}
+
+//<表达式>→<算术表达式>|<逻辑表达式>|<字符常量>|<字符串常量>
+int Expression()
+{
+	Arithmetic_Expression();
+	Logic_Expression();
+	if (now_Token.type_id == 5 || now_Token.type_id == 6)
+	{
+		readToken();
+	}
+	return 1;
+
+}
+
+//<算数表达式>→ <T> 【W1 <T>】
+int Arithmetic_Expression()
+{
+	T();
+	if (now_Token.type_id == 2 && (PT[now_Token.num] == "+" || PT[now_Token.num] == "-"))
+	{
+		readToken();
+		T();
+	}
+	return 1;
+}
+
+//<T>→<F> 【W2 <F>】
+int T()
+{
+	F();
+	if (now_Token.type_id == 2 && (PT[now_Token.num] == "*" || PT[now_Token.num] == "/"))
+	{
+		readToken();
+		F();
+	}
+	return 1;
+}
+
+
+//<F>→(<算术表达式>)|<标识符> |<整数>|<实数>
+int F()
+{
+	if (now_Token.type_id == 2 && PT[now_Token.num] == "(")
+	{
+		readToken();
+		Arithmetic_Expression();
+		if (now_Token.type_id == 2 && PT[now_Token.num] == ")")
+		{
+			readToken();
+			return 1;
+		}
+	}
+	else if (now_Token.type_id == 3 || now_Token.type_id == 4)
+	{
+		readToken();
+		return 1;
+	}
+	else if (now_Token.type_id == 2)	
+	{
+		readToken();
+		return 1;
+	}
+	return 1;
+}
+
+//逻辑表达式
+int Logic_Expression()
+{
+	if (now_Token.type_id == 2 && (PT[now_Token.num] == "<" || 
+		PT[now_Token.num] == "<=" || PT[now_Token.num] == ">" || 
+		PT[now_Token.num] == ">=" || PT[now_Token.num] == "==" || 
+		PT[now_Token.num] == "!="  ))
+	{
+		readToken();
+		Arithmetic_Expression();
+	}
+	return 1;
+}
+
+（3）下一步计划
+我打算在语法分析的基础上修改代码，从而达到语义分析的的功能。由于对语义分析不是很熟悉，所以重新学习了一遍语义分析的课程内容，目前正在学习如何将语义分析的思想利用代码进行实现。
+
+
+
+
+3.总结和感悟
+组长在分配任务的时候，我选择了最复杂的语法语义分析，可是最后发现自己根本无法一个人完成。万幸的是组长重新审视了分配的任务，最终决定只做前段，因此组长的任务最后变成了与我一同完成语法语义分析，这使得我轻松了许多。而由于这是第一次用代码实现语义分析，因此在没有把握的情况下我和组长都选择了重新学习一遍课程，所以最终这一周只完成了语法分析部分。
+现在编译原理的课程设计已经过了大半，目前来说进度似乎稍稍有些落后。我目前的感受是，真的好难啊！这绝对是遇到过最大的一次课设项目了。作为转专业的学生，我本身的编程能力就不如同期本专业的同学们，而编译这次课设又如此之大，导致我一开始非常懵，毫无头绪，根本不知道从哪里开始动手。而每次上机都需要通过腾讯会议进行汇报，虽然老师学长学姐们都很热情，也很乐意给我们解答问题。可我是不太擅长记录问题的一类人，遇到问题我喜欢独立思考无论最后成功与否都很少咨询别人。所以虽然课程设计途中遇到很多问题，但每当学长学姐们问起的时候，我觉得有些问题难以表达，有些难以启齿，有些完全忘记了，而以前的课程设计在同学的帮助和自己的思考下也能解决，索性就没有咨询学长学姐们。最后每次开会反而成了负担，每次都要思考待会应该说点什么？
+最后，很感谢老师还有学长学姐们在自己繁忙的学习和工作中还抽出时间来指导我们，谢谢你们。我一定会好好努力，尽我所能的完成这次编译原理课程设计。
+
