--- a/过程报告/03物联网1802-马启文-20184342/第一次过程报告.md
+++ b/过程报告/03物联网1802-马启文-20184342/第一次过程报告.md
@@ -1,1 +1,584 @@
 
+我负责词法分析这一部分，在编译实验课程上，我们做过了简单的词法分析器和语法分析器，但是当时写的比较简单，现在要改成用自动机去写，还要和别人的部分联系起来，难度升级。针对我负责的词法分析识别器的模块，首先确定好功能： 识别器： 在词法分析器中识别器的具体功能是识别单词的有限自动机。程序语言的单词符号一般可分为 （1）关键字KT：由程序语言定义的在关键字表中存在的的标识符。也称这些标识符为基本字或保留字。 （2）标识符IT：标示各种名字，如变量名和函数名等。 （3）字符CT和字符串ST （4）界符PT： 单字符界符:(,),{,},;,.,#,+,-,*,/,=,<,>等。 双字符界符：<=,>=,==,!=,||,&&等。（5）常数：整型常量IC和实型常量FC 
+//关键字表
+const char* KT[14] = { "main","int","char","float","if","else","do","while","for","scanf","printf","return","const" };
+
+//标识符表
+vector<string> IT;
+
+//界符表
+const char* PT[19] = { "+" ,"-","*","/","<",">","<=",">=","=","!=","==",";",",","(",")","[","]","{" ,"}" };
+
+//字符表
+vector<char> CT;
+
+//字符串常量表
+vector<string> ST;
+
+//整型常量表
+vector<int> IC;
+
+//实型常量表
+vector<float> FC;
+翻译器： 根据上面有限自动机所识别出的单词符号，完成从单词传到单词的TOKEN串的翻译，形成相应的TOKEN串。然后输入源程序，对源程序的字符串进行分解和扫描，识别出它们的类别。
+struct TOKEN
+{
+	int code;
+	int num;
+
+};			
+识别器： 判断这些单词的种类。
+主要函数以及功能：
+
+void int_List();	//初始化各类表
+void printf_tok(string a, int c, string b);	//打印结果
+void printf_data(string data);	//打印读取的内容
+void read_data(const string& file, string& Data);	//读取文件的内容
+void find_tok(string w, int m);	//根据结束状态进行输出
+int tranS(int beS, char ch);	//有限自动机状态转换
+int run(const string& Data);	//判断自动机的状态是否到达结束状态，并进行下一步动作
+具体代码如下，还在进一步修改中：
+//fun.cpp
+#include <iostream>
+#include <map>
+#include <string>
+#include <fstream>
+#include"head.h"
+
+using namespace std;
+
+map<string, int> KT;	//关键字
+map<string, int> iT;	//标识符
+map<string, int> cT;	//字符
+map<string, int> sT;	//字符串
+map<string, int> PT;	//界符
+map<string, int> CT;	//常数
+
+//token序列类型
+string B[6] = { "KT","iT","cT","sT","PT","CT" };
+
+int p = 0;				//Data的读写头
+string word = "";		//当前检验的字符串
+string Data;			//存储文件的内容
+
+
+//有限自动机状态
+const int ERROR = -1;
+const int S0 = 0;
+const int S1 = 1;
+const int S2 = 2;
+const int S3 = 3;
+const int S4 = 4;
+const int S5 = 5;
+const int S6 = 6;
+const int S7 = 7;
+const int S8 = 8;
+const int S9 = 9;
+const int S10 = 10;
+const int S11 = 11;
+const int S12 = 12;
+const int S13 = 13;
+const int S14 = 14;
+const int S15 = 15;
+const int S16 = 16;
+const int S17 = 17;
+const int S18 = 18;
+const int S19 = 19;
+const int S20 = 20;
+const int S21 = 21;
+const int S22 = 22;
+const int S23 = 23;
+const int S24 = 24;
+const int S25 = 25;
+const int S26 = 26;
+const int S27 = 27;
+const int S28 = 28;
+const int S29 = 29;
+const int S30 = 30;
+
+//有限自动机结束状态
+const int ok1 = 90;
+const int ok2 = 91;
+const int ok3 = 92;
+const int ok4 = 93;
+const int ok5 = 94;
+const int ok6 = 95;
+
+//初始化表
+/*void int_List()
+{
+	//关键字表
+	KT["main"] = 1;
+	KT["char"] = 2;
+	KT["int"] = 3;
+	KT["long"] = 4;
+	KT["short"] = 5;
+	KT["signed"] = 6;
+	KT["unsigned"] = 7;
+	KT["double"] = 8;
+	KT["float"] = 9;
+	KT["void"] = 10;
+	KT["union"] = 11;
+	KT["enum"] = 12;
+	KT["extern"] = 13;
+	KT["register"] = 14;
+	KT["auto"] = 15;
+	KT["const"] = 16;
+	KT["static"] = 17;
+	KT["struct"] = 18;
+	KT["typedef"] = 19;
+	KT["volatile"] = 20;
+	KT["for"] = 21;
+	KT["while"] = 22;
+	KT["do"] = 23;
+	KT["switch"] = 24;
+	KT["default"] = 25;
+	KT["case"] = 26;
+	KT["continue"] = 27;
+	KT["return"] = 28;
+	KT["break"] = 29;
+	KT["sizoef"] = 30;
+	KT["goto"] = 31;
+	KT["void"] = 32;
+	KT["if"] = 33;
+	KT["scanf"] = 34;
+	KT["printf"] = 35;
+	
+
+
+	//界符表
+	PT["+"] = 1;
+	PT["-"] = 2;
+	PT["*"] = 3;
+	PT["/"] = 4;
+	PT["<"] = 5;
+	PT["<="] = 6;
+	PT[">"] = 7;
+	PT[">="] = 8;
+	PT["=="] = 9;
+	PT["!="] = 10;
+	PT["="] = 11;
+	PT[";"] = 12;
+	PT[","] = 13;
+	PT["("] = 14;
+	PT[")"] = 15;
+	PT["["] = 16;
+	PT["]"] = 17;
+	PT["{"] = 18;
+	PT["}"] = 19;
+
+	iT[""] = 0;	//标识符
+	cT[""] = 0;	//字符
+	sT[""] = 0;	//字符串
+	CT[""] = 0;	//常量
+}*/
+
+//打印文件的内容
+void printf_data(string data)
+{
+	cout << data << endl << endl;
+}
+
+//从文件读取测试数据
+void read_data(const string& file, string& Data)
+{
+	ifstream fin(file.c_str());
+	if (!fin)
+	{
+		cerr << file << " error!" << endl;
+		exit(2);
+	}
+	Data.clear();
+	string line;
+	while (getline(fin, line))
+	{
+		Data += line + '\n';
+	}
+}
+
+//根据结束状态进行输出
+void find_tok(string w, int m)
+{
+	map<string, int>::const_iterator cit;
+	int k = 1;
+	switch (m)
+	{
+	//关键字符和标识符
+	case 90:
+		cit = KT.find(w);
+		if (cit != KT.end())		//关键字
+		{
+			printf_tok(w, cit->second, B[0]);
+		}
+		else			//标识符
+		{
+			cit = iT.find(w);
+			if (cit != iT.end())	//输出已存在的标识符
+			{
+				printf_tok(w, cit->second, B[1]);
+			}
+			else			//添加新的标识符
+			{
+				k = iT.size();
+				iT[w] = k;
+				printf_tok(w, k, B[1]);
+			}
+		}break;
+	//字符
+	case 92:
+		cit = cT.find(w);
+		if (cit != cT.end())	//输出已存在
+		{
+			printf_tok(w, cit->second, B[2]);
+		}
+		else		//添加新的
+		{
+			k = cT.size();
+			cT[w] = k;
+			printf_tok(w, k, B[2]);
+		}break;
+	//字符串
+	case 93:
+		cit = sT.find(w);
+		if (cit != sT.end())	//输出已存在
+		{
+			printf_tok(w, cit->second, B[3]);
+		}
+		else		//添加新的
+		{
+			k = sT.size();
+			sT[w] = k;
+			printf_tok(w, k, B[3]);
+		} break;
+	//常量
+	case 94:
+		cit = CT.find(w);
+		if (cit != CT.end())	//输出已存在
+		{
+			printf_tok(w, cit->second, B[5]);
+		}
+		else		//添加新的
+		{
+			k = CT.size();
+			CT[w] = k;
+			printf_tok(w, k, B[5]);
+		}break;
+	//界符
+	case 95:
+		cit = PT.find(w);
+		if (cit != PT.end())	//输出关界符
+		{
+			printf_tok(w, cit->second, B[4]);
+		}
+		else
+		{
+			cout << "error !" << endl;
+		}break;
+	default:
+		break;
+	}
+
+}
+
+//打印输出的结果
+void printf_tok(string a, int c, string b)
+{
+	cout << a << ": <" << b << "," << c << ">" << endl;
+}
+
+//有限自动机状态转换
+int tranS(int beS, char ch)//, const map<int, string>& KT
+{
+	switch (beS)
+	{
+	case S0:
+	{
+		if ((ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z')||ch =='_')
+			return S1;
+		else if (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+			return S0;
+		else if (ch == '\'')
+			return S2;
+		else if (ch == '"')
+			return S4;
+		else if (ch >= '0' && ch <= '9')
+			return S6;
+		else if (ch == '+')
+			return S8;
+		else if (ch == '-')
+			return S9;
+		else if (ch == '*')
+			return S10;
+		else if (ch == '/')
+			return S11;
+		else if (ch == '<')
+			return S12;
+		else if (ch == '>')
+			return S13;
+		else if (ch == '=')
+			return S14;
+		else if (ch == ':')
+			return S15;
+		else if (ch == ';')
+			return S16;
+		else if (ch == ',')
+			return S17;
+		else if (ch == '(')
+			return S18;
+		else if (ch == ')')
+			return S19;
+		else if (ch == '[')
+			return S20;
+		else if (ch == ']')
+			return S21;
+		else if (ch == '{')
+			return S22;
+		else if (ch == '}')
+			return S23;
+		else if (ch == '!')
+			return S24;
+		else
+			return ERROR;
+	}
+	case S1:
+	{
+		if ((ch >= '0' && ch <= '9') || (ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z') || ch == '_')
+			return S1;
+		else
+			return ok1;
+	}
+	case S2:
+	{
+		//if ((ch >= '0' && ch <= '9') || (ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z') || ch == '_')
+		if (1)
+		{
+			//word += ch;
+			//p++;
+			return S3;
+		}
+		else
+			return ERROR;
+	}
+	case S3:
+	{
+		if (ch == '\'')
+		{
+			word += ch;
+			p++;
+			while (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+			{
+				p++;
+				ch = Data[p];
+			}
+			return ok3;
+		}
+		else
+			return ERROR;
+
+	}
+	case S4:
+	{
+		
+		//if ((ch >= '0' && ch <= '9') || (ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z') || ch == '_')
+		if (ch != '"')
+			return S4;
+		else if (ch == '"')
+		{
+			word += ch;
+			p++;
+			while (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+			{
+				p++;
+				ch = Data[p];
+			}
+			return ok4;
+		}
+
+		else
+			return ERROR;
+	}
+	case S6:
+	{
+		if (ch >= '0' && ch <= '9')
+			return S6;
+		else if (ch == '.')
+			return S6;
+		else
+			return ok5;
+	}
+	case S8:
+	{
+		return ok6;
+	}
+	case S9:
+	{
+		return ok6;
+	}case S10:
+	{
+		return ok6;
+	}case S11:
+	{
+		return ok6;
+	}
+	case S12:
+	{
+		if (ch == '=')
+		{
+			return S25;
+		}
+		return ok6;
+	}
+	case S13:
+	{
+		if (ch == '=')
+		{
+			return S25;
+		}
+		return ok6;
+	}
+	case S14:
+	{
+		if (ch == '=')
+		{
+			return S25;
+		}
+		return ok6;
+	}
+	case S15:
+	{
+		return ok6;
+	}
+	case S16:
+	{
+		return ok6;
+	}
+	case S17:
+	{
+		return ok6;
+	}
+	case S18:
+	{
+		return ok6;
+	}
+	case S19:
+	{
+		return ok6;
+	}
+	case S20:
+	{
+		return ok6;
+	}
+	case S21:
+	{
+		return ok6;
+	}
+	case S22:
+	{
+		return ok6;
+	}
+	case S23:
+	{
+		return ok6;
+	}
+	case S24:
+	{
+		if (ch == '=')
+		{
+			return S25;
+		}
+		return S25;
+	}
+	case S25:
+	{
+		return ok6;
+	}
+	default:
+	{
+		return ERROR;
+	}
+	}
+}
+
+//判断自动机的状态是否到达结束状态，并进行下一步动作
+int run(const string& Data)
+{
+	int_List();
+	char ch = Data[p];
+	while (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+	{
+		++p;
+		ch = Data[p];
+	}
+	word += ch;
+	int now_s = 0, next_s = 0;
+	next_s = tranS(now_s, ch);
+	p++;
+	now_s = next_s;
+	while (p < Data.size())
+	{
+		if ((now_s >= 0) && (now_s < 90))
+		{
+			ch = Data[p];
+			next_s = tranS(now_s, ch);
+
+			if ((next_s >= 0) && (next_s < 90))
+			{
+				if (now_s == S4)
+				{
+					word += ch;
+				}
+				else
+				{
+					if (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t');
+					else
+					{
+						word += ch;
+					}
+				}
+				p++;
+			}
+			else if ((next_s >= 90) && (next_s < 97));
+			else
+			{
+				p++;
+				ch = Data[p];
+			}
+			now_s = next_s;
+
+
+		}
+		else if ((now_s >= 90) && (now_s < 97))
+		{
+			find_tok(word, next_s);
+			now_s = S0;
+			next_s = 0;
+			word = "";
+			if (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+			{
+				while (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+				{
+					p++;
+					ch = Data[p];
+				}
+			}
+			else
+				;
+		}
+		else
+		{
+			cout << "error!" << endl;
+			while (ch == '\r' || ch == '\n' || ch == ' ' || ch == '\t')
+			{
+				p++;
+				ch = Data[p];
+			}
+			now_s = S0;
+			next_s = 0;
+			word = "";
+		}
+	}
+	return 0;
+}
+
+
+
