--- a/过程报告/02物联网1802-刘龙辉-20183613/第一次过程报告.md
+++ b/过程报告/02物联网1802-刘龙辉-20183613/第一次过程报告.md
@@ -88,12 +88,13 @@
 
 
 以及如下符号表：
+```
 struct TOKEN
 {
 	int type_id;
 	int num;
 	/*
-	code
+	type_id
 	0：关键字表
 	1：标识符表
 	2：界符表
@@ -194,7 +195,7 @@ vector<int> Len_List;
 
 //四元式序列
 vector<QT> QT_List;
-
+```
 
 
 （2）语法语义义分析
@@ -203,6 +204,7 @@ vector<QT> QT_List;
 根据词法分析给出的token序列，不断地进行读取，再利用修改后的文法与符号表对读取内容进行自上而下的递归子程序分析。
 
 2.	实现代码
+```
 #include <iostream>
 #include <stdio.h>
 #include <map>
@@ -948,7 +950,7 @@ int Logic_Expression()
 	}
 	return 1;
 }
-
+```
 （3）下一步计划
 我打算在语法分析的基础上修改代码，从而达到语义分析的的功能。由于对语义分析不是很熟悉，所以重新学习了一遍语义分析的课程内容，目前正在学习如何将语义分析的思想利用代码进行实现。
 
