--- a/过程报告/03物联网1802-马启文-20184342/第一次过程报告.md
+++ b/过程报告/03物联网1802-马启文-20184342/第一次过程报告.md
@@ -2,7 +2,7 @@
 我负责词法分析这一部分，在编译实验课程上，我们做过了简单的词法分析器和语法分析器，但是当时写的比较简单，现在要改成用自动机去写，还要和别人的部分联系起来，难度升级。针对我负责的词法分析识别器的模块，首先确定好功能： 识别器： 在词法分析器中识别器的具体功能是识别单词的有限自动机。程序语言的单词符号一般可分为 （1）关键字KT：由程序语言定义的在关键字表中存在的的标识符。也称这些标识符为基本字或保留字。 （2）标识符IT：标示各种名字，如变量名和函数名等。 （3）字符CT和字符串ST （4）界符PT： 单字符界符:(,),{,},;,.,+,-,*,/,=,<,>等。 双字符界符：<=,>=,==,!=,等。（5）常数：整型常量IC和实型常量FC 
 ```c++
 //关键字表
-const char* KT[14] = { "main","int","char","float","if","else","do","while","return","const" };
+const char* KT[10] = { "main","int","char","float","if","else","while","return","const" };
 
 //标识符表
 vector<string> IT;
