--- a/过程报告/03物联网1802-马启文-20184342/第二次过程报告.md
+++ b/过程报告/03物联网1802-马启文-20184342/第二次过程报告.md
@@ -1,1 +1,105 @@
 
+#第二次过程报告#
+这段时间对词法分析的代码进行进一步的修改，在组长欧尔的帮助下，目前已全部完成。
+首先，更改了一些程序语言的单词符号及其类型，具体如下：
+//token序列
+vector<TOKEN> TOKEN_List;
+
+//标识符表
+vector<string> IT;
+
+//字符表
+vector<string> CT;
+
+//字符串常量表
+vector<string> ST;
+
+//整型常量表
+vector<string> IC;
+
+//实型常量表
+vector<string> FC;
+
+//SYNBL主表
+vector<SYNBL> SYNBL_List;
+
+//类型表
+vector<TYPEL> TYPEL_List;
+
+//数组表
+vector<AINFL> AINFL_List;
+
+//函数表
+vector<PFINFL> PFINFL_List;
+
+//长度表
+vector<int> Len_List;
+
+//四元式序列
+vector<QT> QT_List;
+
+//词法扫描的单词列表
+vector<Scan_Word> Word_List;
+
+//token序列类型
+string B[8] = { "KT","IT","PT","IC" ,"FC","CT","ST","注释" };
+
+其次，相应的函数也进行了添加和修改
+
+//打印输入的数据
+void printf_data(string data)
+
+//从文件读取测试数据
+void read_data(const string& file, string& Data)
+
+//有限自动机状态转换
+int tranS(int beS, char ch)
+
+//根据现自动机状态，进行操作判断
+int scan_word_run(const string& Data)
+
+//对单词列表逐个进行token匹配输出
+int find_token()
+
+//按自动机结束状态进行输出
+void find_tok(string w, int m)
+
+//文件初始化，清空文件的原内容
+void clear_file()
+
+//将输出保存到文件中
+void printf_tok(string a, string b, int c)
+
+//在关键字表中查找w，找到则返回所在位置下标，否则返回-1
+int search_KT(string w)
+
+//在界符表中查找w，找到则返回所在位置下标，否则返回-1
+int search_PT(string w)
+
+//在字符常量表中查找w，找到则返回所在位置下标，否则返回-1
+int search_CT(string w)
+
+//在字符串常量表中查找w，找到则返回所在位置下标，否则返回-1
+int search_ST(string w)
+
+//在整型常量表中查找w，找到则返回所在位置下标，否则返回-1
+int search_IC(string w)
+
+//在实数常量表中查找w，找到则返回所在位置下标，否则返回-1
+int search_FC(string w)
+
+//词法分析主函数
+int scan_run()
+{
+	string input_file;
+	string input_data;
+	clear_file();
+	input_file = "input.txt";
+	//cin >> input_file;
+	read_data(input_file, input_data);
+	scan_word_run(input_data);
+	find_token();
+	//system("pause");
+	return 0;
+}
+
