--- a/过程报告/02物联网1802-刘龙辉-20183613/第二次过程报告.md
+++ b/过程报告/02物联网1802-刘龙辉-20183613/第二次过程报告.md
@@ -1,1 +1,27 @@
 
+第二次阶段报告
+ 物联网1802刘龙辉
+一、概述
+这不到一周的时间内，我做了很多挺多艰巨的任务。上周已经完成了语法分析的实现，这周只需完成语义分析的工作即可，而且还有组长的帮忙，想必会很轻松。可是语义分析这部分的内容老师虽然讲的很详细，但我依旧不尽理解，我想自己重新学习一遍语义分析以及代码实现，并根据组长的代码照猫画虎，可是我没想到的是，组长的想法居然和我一样。所以我俩都画了很多的时间重新学习。
+这一周内完成的任务大致如下：
+	通过MOOC重新学习语义分析
+	通过讨论与查询资料学习如何用代码实现语义分析
+	修改语法分析文法使之成为翻译文法
+	语义分析之符号表填写
+	语义分析之四元式生成
+	疯狂进行调试调试……
+二、翻译文法
+此文法实现是在语法分析的基础上通过添加语义动作实现的，由于组长掌握的比我快，所以我只是写了很少一部分，主要是循环语句和选择语句的翻译。
+如：While ① (表达式 ② ) {循环体} ③ 
+①	生成标号 while 四元式并压入对象栈中；  
+②	根据对象栈栈顶元素生成判断 while 四元式，弹出对象栈栈顶元素并将指向新生成四元式的 Token 压入对象栈等待地址回填；  
+③	生成标号 whend 四元式，其地址为对象栈中次栈顶元素四元式的位置，
+将对象栈栈顶元素所指向的四元式的地址修改为新生成四元式的下一个位置，再次弹出栈顶元素；  
+三、语义分析之符号表填写
+符号表是程序的知识库程序运行中用到的用到的资源除了部分常量以外都可以去符号表中查找。在遇到声明语句时先检查一下符号表中是否存在该名字的记录项，若不存在将信息填入符号表，否则创建指向该记录的 Token，在填写符号表时需要查或填写数组表、常数表、类型表。
+四、语义分析之四元式生成
+由于中间代码序列中（表 QT_TOKEN_List）中有的数据段存放的是可索引到具体值的 Token，但由于后端期望使用的仅是字符串然后根据这些字符串去生成对应的机器代码文本，所以为后端创建一个接口，即将符号表中一项具体的数据索引出来转化为另一种字符型四元式（QT)并同时存入字符型中间代码序列中（QT_List）供后端使用。
+五、总结
+最初分配任务时，我没有想到语义分析的难度这么大，好在最后组长帮助了我，而且大部分工作都是组长做的。在重新学习过程中，我发现了自己很多的不足之处，而在时间的压迫下学习的很草率，导致我还没有完全掌握就开始了代码的实现，最后当然都是无用功。所以最后我的有用工作量其实很小。
+要说遇到的问题，那可太多了，不过主要都是不知道怎么动手如何实现，非常的迷茫，所以也没有主动去询问老师学长学姐们。
+这一周以来我的信心受到了巨大的打击，感觉自己似乎什么都不会什么都不懂，整天坐在电脑前什么事情都干不了，一度想要放弃。真的非常感谢组长的力挽狂澜，承担了我们的大部分工作。其实到现在我都还很糊涂，基本上完成的工作也就是按组长的吩咐。
