--- a/过程报告/01物联网1802-欧尔-20184332/第二次过程报告.md
+++ b/过程报告/01物联网1802-欧尔-20184332/第二次过程报告.md
@@ -1,1 +1,44 @@
 
+##  编译原理课程设计 第一次过程报告
+
+*专业班级：物联网1802班       姓名：欧尔       学号： 20184332              更新于 2020 年 7 月 9 日* 
+
+
+
+### 一、项目目前进度
+
++ 词法分析完成
++ 语法分析完成
++ 语义分析完成
++ 中间代码优化（部分完成）
+
+### 二、个人进展
+
+#### 1、文法设计与调整
+
+​	主笔设计文法并在过程中逐步修改文法；
+
+#### 2、基础结构设计
+
+​	各符号表结构设计、token序列设计、各表之间的链接指向设计、四元式结构设计；
+
+#### 3、调试词法的接口调整和部分调试
+
+​	修改词法分析部分功能，对部分函数的调用实现了调整，并整合词法程序至主程序，并整体调试；
+
+#### 4、语法分析的部分完成与整体调试
+
+​	对语法分析使用了递归子程序下降的方法，写出各个子程序的流程图，并用代码实现
+
+#### 5、语义分析的部分完成与整体调试
+
+​	语义动作的设计，四元式的生成设计，并用代码实现。
+
+
+
+### 三、实验感想
+
+​	本次课程设计，对于我来说还是挺有难度的，对于整体的设计实现，只有有了很清楚的实现思想，才能够在用代码实现的过程中少出错，并且调试的时候也能很快找出问题所在和解决方法。课设的整体进度稍微缓慢，但也在一点一点的实现。
+
+
+
