--- a/过程报告/04物联网1802-徐传波-20184595/第二次过程报告.md
+++ b/过程报告/04物联网1802-徐传波-20184595/第二次过程报告.md
@@ -1,1 +1,30 @@
 
+编译原理实验报告
+中间代码优化
+优化其实可以在编译的各个阶段进行，但最主要的一类优化是在目标代码生成以前，对语法分析、语义分析后产生的中间代码进行优化。这是因为中间代码的形式不依赖于具体的计算机，它可以是三地址码的形式，所以相应的对于中间代码的优化也不依赖于具体的计算机。另一类优化是在生成目标代码时进行的，它很大程序上依赖于具体的计算机。
+一．公共子表达式删除
+对于一个表达式E，如果它的值在前面已经计算过，并且在这之后E中变量的值并没有发生过改变，那我们就称这样的表达式E为公共子表达式。对于这样的公共子表达式，我们可以避免对它的重复计算，而全部使用E中已经计算出的结果，称为删除公共子表达式，有时也称为删除多余运算。
+    对于语句s:z=x*y  有，如果   x*y在s之前可用，那么执行如下步骤：
+1.从s开始逆向搜索，但不穿过任何计算了的x*y的块，找到所有离s最近的计算了的x*y的语句。
+2.建立新的临时变量u
+3.把1中找到的语句w=x*y 进行替换
+     u=x*y
+     w=u
+     z=u
+二  删除复制语句
+   对于复制语句s：x=y，如果在x的所有引用点都可以用对y的引用代替对x的引用，那么可以删除复制语句x=y
+    根据链找出该定值所能到达的那些对x的引用，确定是否对于每个这样的引用都在基本块中，并且基本块中该引用的前面没有x或者y的定值。删除复制语句，并把对x的引用用y代替
+ 三 . DAG
+在DAG图中，通过节点间的连线和层次关系来表示表示式或运算的归属关系：
+① 图的叶结点，即无后继以一标识符（变量名）或常数作为标记，表示这个结点代表该变量或常数的值。如果叶结点用来代表某变量A的地址，则用addr（A）作为这个结点的标记。
+② 图的内部结点，即有后继的结点,以一运算符作为标记，表示这个结点代表应用该运算符对其后继结点所代表的值进行运算的结果
+四  代码外提
+对于循环中的某些代码，如果在整个循环的过程中它产生的结果是不变的，就可以将这部分代码提到循环外去，以免每一次循环都要对这条代码进行运算。例如对于while(i<limit-1)...这样的代码，如果limit是一个在循环中没有改变的值，我们完全可以将limit-1提到循环外：
+t=limit-1
+while(i<t)...
+五  删除基本归纳变量
+    若基本归纳变量B在循环出口之后不再引用，且在 循环 中除B：=B=C处被引用外，只在型如 if B  op  Y goto(a)中被引用，则
+选一与B同族的归纳变量M，M=C1*B+C2
+建立临时变量R，在前置结点中增加  R：=C1*Y+C2
+用if  M  op  R   goto（a）替换if B  op  Y goto(a）
+删除 B：=B+C
